# collinear-bot

./: .gitignore  Cargo.toml  README.md
src/: candle_cache.rs  config.rs  main.rs  ws.rs
src/exchange/: bybit.rs  mod.rs  traits.rs
src/notify/: dedup.rs  mod.rs  telegram.rs
src/scanner/: finder.rs  mod.rs
src/stats/: cointegration.rs  math.rs  mod.rs
src/trading/: engine.rs  models.rs
