[package]
name = "lead-lag"
version = "0.4.0"
edition = "2021"
description = "Cointegration scanner & paper trader for crypto futures"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "5"
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true